[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-generativeai>=0.8.6",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "sodapy>=2.2.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.50.0",
]
